--- a/ATTN_env.yml
+++ b/ATTN_env.yml
@@ -3,67 +3,67 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - aom=3.5.0=hf0c8a7f_0
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.12.7=h033912b_0
-  - cairo=1.16.0=h904041c_1014
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - dav1d=1.0.0=hac89ed1_1
-  - expat=2.5.0=hf0c8a7f_0
-  - fluidsynth=2.3.1=h75b786d_1
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.2=h5bb23bf_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.12.1=h3f81eb7_1
-  - gettext=0.21.1=h8a4c099_0
-  - graphite2=1.3.13=h2e338ed_1001
-  - harfbuzz=6.0.0=h08f8713_0
-  - icu=70.1=h96cf925_0
-  - lame=3.100=hb7f2c08_1003
-  - lerc=4.0.0=hb486fe8_0
-  - libavif=0.11.1=he9a59b1_0
-  - libcxx=15.0.7=h71dddab_0
-  - libdeflate=1.17=hac1461d_0
-  - libffi=3.4.2=hecd8cb5_6
-  - libflac=1.4.2=hf0c8a7f_0
-  - libglib=2.74.1=h4c723e1_1
-  - libiconv=1.17=hac89ed1_0
-  - libjpeg-turbo=2.1.5.1=hb7f2c08_0
-  - libmad=0.15.1b=hb7f2c08_1001
-  - libogg=1.3.4=h35c211d_1
-  - libopus=1.3.1=hc929b4f_1
-  - libpng=1.6.39=ha978bb4_0
-  - libsndfile=1.2.0=h591af1c_0
-  - libtiff=4.5.0=hd920806_5
-  - libvorbis=1.3.7=h046ec9c_0
-  - libwebp-base=1.3.0=hb7f2c08_0
-  - libzlib=1.2.13=hfd90126_4
-  - mpg123=1.31.2=hf0c8a7f_0
-  - ncurses=6.4=hcec6c5f_0
-  - openssl=1.1.1t=hfd90126_0
-  - opusfile=0.12=hc97edf9_2
-  - pcre2=10.40=h1c4e4bc_0
-  - pip=23.0.1=py310hecd8cb5_0
-  - pixman=0.40.0=hbcb3906_0
-  - portaudio=19.6.0=hf0c8a7f_7
-  - portmidi=2.0.4=h5095954_0
-  - pygame=2.2.0=py310h8c3c4e7_1
-  - python=3.10.9=h218abb5_2
-  - python_abi=3.10=2_cp310
-  - readline=8.2=hca72f7f_0
-  - sdl2=2.26.4=hf0c8a7f_0
-  - sdl2_image=2.6.3=h5d7643b_1
-  - sdl2_mixer=2.6.3=ha552b2f_0
-  - sdl2_ttf=2.20.2=h7bafa26_0
-  - setuptools=65.6.3=py310hecd8cb5_0
-  - sqlite=3.40.1=h880c91c_0
-  - tk=8.6.12=h5d9f67b_0
-  - tzdata=2022g=h04d1e81_0
-  - wheel=0.38.4=py310hecd8cb5_0
-  - xz=5.2.10=h6c40b1e_1
-  - zlib=1.2.13=hfd90126_4
-  - zstd=1.5.2=hbc0c0cd_6
+  - aom=3.5.0
+  - bzip2=1.0.8
+  - ca-certificates=2022.12.7
+  - cairo=1.16.0
+  - certifi=2022.12.7
+  - dav1d=1.0.0
+  - expat=2.5.0
+  - fluidsynth=2.3.1
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.12.1
+  - gettext=0.21.1
+  - graphite2=1.3.13
+  - harfbuzz=6.0.0
+  - icu=70.1
+  - lame=3.100
+  - lerc=4.0.0
+  - libavif=0.11.1
+  - libcxx=15.0.7
+  - libdeflate=1.17
+  - libffi=3.4.2
+  - libflac=1.4.2
+  - libglib=2.74.1
+  - libiconv=1.17
+  - libjpeg-turbo=2.1.5.1
+  - libmad=0.15.1b
+  - libogg=1.3.4
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libsndfile=1.2.0
+  - libtiff=4.5.0
+  - libvorbis=1.3.7
+  - libwebp-base=1.3.0
+  - libzlib=1.2.13
+  - mpg123=1.31.2
+  - ncurses=6.4
+  - openssl=1.1.1t
+  - opusfile=0.12
+  - pcre2=10.40
+  - pip=23.0.1
+  - pixman=0.40.0
+  - portaudio=19.6.0
+  - portmidi=2.0.4
+  - pygame=2.2.0
+  - python=3.10.9
+  - python_abi=3.10
+  - readline=8.2
+  - sdl2=2.26.4
+  - sdl2_image=2.6.3
+  - sdl2_mixer=2.6.3
+  - sdl2_ttf=2.20.2
+  - setuptools=65.6.3
+  - sqlite=3.40.1
+  - tk=8.6.12
+  - tzdata=2022g
+  - wheel=0.38.4
+  - xz=5.2.10
+  - zlib=1.2.13
+  - zstd=1.5.2
