--- a/ATTN_env.yml
+++ b/ATTN_env.yml
@@ -67,4 +67,22 @@ dependencies:
   - xz=5.2.10
   - zlib=1.2.13
   - zstd=1.5.2
+  - pip:
+      - absl-py==1.4.0
+      - attrs==22.2.0
+      - contourpy==1.0.7
+      - cycler==0.11.0
+      - flatbuffers==23.3.3
+      - fonttools==4.39.0
+      - kiwisolver==1.4.4
+      - matplotlib==3.7.1
+      - mediapipe==0.9.1.0
+      - numpy==1.24.2
+      - opencv-contrib-python==4.7.0.72
+      - packaging==23.0
+      - pillow==9.4.0
+      - protobuf==3.20.3
+      - pyparsing==3.0.9
+      - python-dateutil==2.8.2
+      - six==1.16.0
 prefix: /Users/holger/miniconda3/envs/ATTN_env
